# agent-harness

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  design-tokens.json  openapi.yaml  pyproject.toml
.claude/: settings.json
.codex/: hooks.json
agent-specs/: ai-worker.spec.md  backend-worker.spec.md  frontend-worker.spec.md  orchestrator.spec.md  rag-worker.spec.md  verifier.spec.md
ai/: .gitignore  README.md  __init__.py  corpus.py  embeddings.py  generation.py  llm_client.py  pipeline.py  requirements.txt  retrieval.py  scoring.py
backend/: README.md
docs/: agent-control-journal.md  agent-control-log.md  evaluation-map.md  harness-log.md  project-state.md  traceability.md
eval/: rag-eval-set.jsonl  run-eval.py  thresholds.yaml
frontend/: README.md
harness/: connectors.md  permissions.policy.md  runtime.yaml  verification.policy.md  worktree.md
harness_runtime/: __init__.py  cli.py  config.py  context_pack.py  contracts.py  gates.py  orchestrator.py  policy.py  pull_request.py  recorder.py  state.py  worktree.py
loops/: _loop.schema.yaml  ai.loop.yaml  backend.loop.yaml  frontend.loop.yaml  rag.loop.yaml
plans/: README.md  _sprint.template.md  _task.template.md  sprint-01.md  sprint-index.md  task-001.md  task-index.md
prompts/: verifier-launch.md  worker-launch.md
requirements/: README.md  frd.md  prd.md
scripts/: generate_agents.py
tests/: test_cli.py  test_context_pack.py  test_contracts.py  test_cross_agent_smoke.py  test_fail_retry_pass.py  test_fake_provider.py  test_gates.py  test_policy.py  test_provider_commands.py  (+4 more)
(+46 files in other folders)
