[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness-runtime"
version = "0.1.0"
description = "Provider-neutral Claude Code and Codex development harness runtime"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
harnessctl = "harness_runtime.cli:entrypoint"

[tool.setuptools.packages.find]
include = ["harness_runtime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
asyncio_default_fixture_loop_scope = "function"

